A.Systems-Builder/A3.Aisystant-Ecosystem-Builder/A3.1.Meaning/3.1.1. Investment-Attraction/pitch/v0.4/DECK.md
---
type: pitch-deck
version: "0.5"
pitch_name: "Мышление для людей"
format: "Презентация (15 слайдов)"
status: draft
created: 2026-03-24
updated: 2026-03-24
ideas_source: ../v0.1/IDEAS.md
tier_used: "1-3 (все уровни)"
changes_from_v02: "FPF-слайд + структура знаний IWE, trajectory динамика, breakdown прогноза 500→3000, retention/NPS данные"
changes_from_v03: "Series A $25M (pre-money $75M, 25% dilution), команда 20 чел (Сооснователь), слайд 12 Why Series A"
changes_from_v04: "Feedback Анатолия: (1) чёткий фокус на текущий продукт ($10/мес подписка, цель $40), (2) QoQ traction + честная динамика, (3) founder secondary без сумм, (4) use-of-funds с 6-мес фокусом"
changes_from_v05: "Репозиционирование: IWE = ОС интеллектуальной работы (не платформа). 4 компонента: Ядро мышления, Культура работы, Модель мастерства, Сообщество. Слоган: Мышление для людей."
---

# Pitch Deck v0.5 «Мышление для людей»

> v0.5 — репозиционирование IWE: ОС, не платформа (24 мар 2026).
> Каждый слайд = 1 идея + 1 визуал.

---

## Слайд 1: Титульный

**IWE — операционная система интеллектуальной работы**

*Мышление для людей. Работает поверх любой AI-платформы.*

Логотип | Основатели | Контакт

---

## Слайд 2: Проблема — мышление обесценивается

**Anthropic и OpenAI строят сильный интеллект для машин. Кто строит сильный интеллект для людей?**

- AI генерирует контент быстрее любого человека — контент стал commodity
- Вузы продают 4 года и диплом, но не учат мыслить (выпускники не могут применить знания)
- Coursera/Stepik масштабируют доступ, но 90% бросают, <15% переносят в практику
- Курсы повышения квалификации — разовые, не системные, без методологии
- **Результат:** люди перестают быть авторами решений — становятся операторами AI-промптов

*Визуал: ось «интеллект машин» растёт экспоненциально, ось «интеллект людей» стагнирует. Gap расширяется. Мы закрываем этот gap.*

---

## Слайд 3: Рынок — новая категория

**Это не EdTech. Это экосистема развития интеллекта — не передача знаний, а усиление мышления.**

Рынок образования ($350B) решает задачу «передать знания/навыки». Мы решаем другую: **усилить способность мыслить**. Образование — наша входная воронка, но продукт — другого класса.

**Почему существующие решения не работают для этой задачи:**

| Решение | Что делает | Почему не решает нашу задачу |
|---|---|---|
| **Вузы** | 4 года → диплом | Передают знания, не учат мыслить. Негибко |
| **Coursera/Stepik** | Масштабный доступ к контенту | Retention <10%, нет практики мышления |
| **Корпоративное L&D** | Тренинги по навыкам | Разовые, не системные, без методологии |
| **Коучинг** | Часы эксперта ($300/час) | Не масштабируется |
| **ChatGPT/AI-тьюторы** | Ответы на вопросы | Заменяют мышление, а не усиливают |

**Мы:** методология мышления + AI-экзоскелет + сообщество практиков. Пожизненная среда, не курс.

TAM $50B (professional development + coaching + lifelong learning + workforce upskilling 44.8% CAGR)
SAM $5B (ИТ-специалисты + корпоративный L&D — первые, кого AI заменяет на рутине, и первые, кому нужно усиление мышления)
SOM $12.6M за 3 года (30K подписчиков x $420/год blended ARPU)
→ Обкатано на русскоязычном рынке (11 лет), масштабируется глобально — ИТ-специалисты не привязаны к языку

*Визуал: 2x2 матрица — «передаёт знания ↔ усиливает мышление» x «разовое ↔ пожизненное». Мы — единственные в квадранте «усиливает мышление + пожизненное».*

---

## Слайд 4: Решение — IWE, операционная система интеллектуальной работы

**Не курсы. ОС, которая усиливает мышление как экзоскелет усиливает тело.**

Человек остаётся автором. AI умножает его возможности. IWE работает поверх любой AI-платформы (Claude, ChatGPT, Copilot) — как Ubuntu работает поверх любого железа.

Четыре компонента IWE:

1. **Ядро мышления** — чем думаешь. Формализованные принципы (FPF, 30+ лет разработки) → прикладные принципы (SPF) → предметные знания (Pack) → конкретные решения (DS). Не soft skills, а инженерия интеллекта. Работает в любой предметной области. Подробнее — слайд 4b.

2. **Культура работы** — как работаешь. Протоколы (формализованные последовательности действий), навыки (нарабатываемые по ситуации) и форматы (стандарты оформления результатов). Не теория — дисциплина каждого дня. Подробнее — слайд 4c.

3. **Модель мастерства** — куда растёшь. Траектория от Ученика до Просветителя. 9 уровней квалификации (привязка к EQF). Чем дольше в IWE — тем ценнее среда, тем точнее AI-персонализация.

4. **Сообщество созидателей** — где живёшь. Наставничество, peer review, совместная практика. Не форум и не профсреда — место для интеллектуальной жизни, где мышление тренируется на реальных задачах.

*Визуал: четыре слоя IWE (Ядро мышления → Культура работы → Модель мастерства → Сообщество) — каждый слой отвечает на свой вопрос*

---

## Слайд 5: Ядро мышления — FPF → SPF → Pack → DS

**Почему «первые принципы» — это не buzzword, а инженерная система**

Ядро мышления IWE — четырёхуровневая структура знаний:

```
FPF (Level 0-1)    Универсальные принципы мышления (30+ лет, 5400+ текстов)
    ↓                 Работают в любой области
SPF (Level 1-2)    Прикладные принципы (инженерия, менеджмент)
    ↓                 Связывают теорию с практикой
Pack (Level 2)     Предметные знания (домен участника)
    ↓                 Source-of-truth, обогащается каждый день
DS (Level 3)       Конкретные решения (код, планы, курсы)
                      Результат работы участника
```

**5 базовых различений FPF:**
1. **Объект ≠ Описание** — реальность не равна модели (карта ≠ территория)
2. **Роль ≠ Метод ≠ Работа** — кто делает ≠ как делает ≠ что получается
3. **Система ≠ Область знания** — физическая сущность ≠ дисциплина
4. **Характеристика ≠ Метрика** — что измеряем ≠ как измеряем
5. **Знание ≠ Обучение** — содержание ≠ процесс усвоения

**Почему это moat:**
- Конкурент может скопировать курс, но не может скопировать мета-онтологию, на которой этот курс построен
- FPF работает в любой предметной области — от инженерии до медицины и бизнеса
- AI, работающий с FPF-структурированными знаниями, даёт на порядок более точные результаты
- **Переносимость:** ядро мышления работает с любым AI-инструментом — это формат знания, не привязка к вендору

**Ссылка:** [FPF-Spec.md](https://github.com/TserenTserenov/FPF/blob/main/FPF-Spec.md) — полная спецификация (open source)

*Визуал: пирамида «FPF → SPF → Pack → DS» — от универсальных принципов к конкретным решениям*

---

## Слайд 6: Культура работы — протоколы, навыки, форматы

**Не список правил, а операционная дисциплина**

Культура работы IWE — это то, КАК человек работает каждый день. Три типа элементов:

**Протоколы** — формализованные последовательности (делаешь по шагам):
- **ОРЗ** (Открытие → Работа → Закрытие) — фрактальный цикл на любом масштабе (сессия, день, неделя)
- **АрхГейт** — оценка решений перед реализацией
- **Day Open / Day Close** — ритуалы начала и завершения дня

**Навыки** — нарабатываются, применяются по ситуации:
- **Capture** — извлечение знания на каждом рубеже работы
- **Self-correction** — немедленное исправление при обнаружении расхождения
- **Различения** — способность видеть разницу (роль ≠ метод ≠ работа)

**Форматы** — стандарты оформления результатов:
- **Pack-структура** — как организовать предметные знания
- **WP-context** — как описать рабочий продукт
- **Collapsible sections** — как структурировать длинные документы

**Почему это даёт преимущество:**
- **AI точность:** когда знания структурированы с границами контекста, AI не «галлюцинирует» — работает в рамках проверенных границ
- **Накопление:** каждый день работы обогащает Pack — знания не теряются, а структурируются
- **Дисциплина масштабируется:** протоколы работают одинаково для одного человека и для команды
- **Не зависит от вендора:** культура работы переносится на любой AI-инструмент

**Ключевое различение:** IWE = экзоскелет (усиливает мышление), НЕ протез (заменяет мышление). Участник остаётся автором, AI — инструментом.

*Визуал: три столбца «Протоколы | Навыки | Форматы» с примерами в каждом*

---

## Слайд 7: Продукт — что продаётся прямо сейчас

**Сегодня продаётся один продукт: подписка на Aisystant — $10/мес.**

Что получает подписчик:
- **LMS** — 9 уровней квалификации (привязка к EQF). Курсы, тесты, домашние задания с обратной связью
- **Бот-наставник** — AI в Telegram, который знает методологию и контекст участника
- **Семинары и потоки** — живая практика с наставниками (10 активных наставников)

**500 человек платят за это прямо сейчас. $60K ARR.**

**Что строим (куда пойдёт транш):**
- **IWE-дистрибутив** — готовое окружение для интеллектуальной работы, разворачиваемое поверх AI-платформ вендоров (Claude, ChatGPT, Copilot). Ядро мышления + культура работы + модель мастерства. Участник строит экзокортекс — внешнее расширение интеллекта
- **Цифровой двойник → персональное руководство.** Каждое действие участника записывается и обновляет профиль. Чем дольше в IWE — тем точнее руководство — тем выше switching cost
- **Web App** — выход за пределы Telegram, доступ из браузера
- **Целевая цена: $40/мес** — рост ARPU через IWE + AI-персонализацию + Web App

**Путь участника:** бесплатный контент → подписка ($10/мес) → IWE + наставник ($40/мес целевая)

*Визуал: два столбца — «Сегодня» (LMS + бот + семинары, $10/мес) → «Через 12 мес» (IWE + ЦД + Web App, $40/мес)*

---

## Слайд 8: Бизнес-модель — «Red Hat интеллекта»

**Контент открытый. Практика, среда и наставничество — платные.**

```
БЕСПЛАТНО                          ПЛАТНО
Руководства, методология     →     Практика, обратная связь
Открытый контент             →     AI-персонализация (IWE)
Сообщество (базовое)         →     Наставничество, семинары
```

Подписка $10/мес сейчас (целевая $40/мес с IWE). Для сравнения: вуз = $3 000-10 000/год за диплом без гарантии мышления. Мы сейчас = $120/год, целевая = $480/год за непрерывное развитие интеллекта с AI-средой и наставниками.

Наставник = ускоритель, не необходимость. Модель масштабируется без линейного роста числа наставников.

**Почему конкуренты не скопируют:** их контент = их продукт. Чтобы открыть — нужно отказаться от выручки. Мы уже открыты. Незаменяемая позиция.

*Визуал: воронка free → paid с конверсией на каждом этапе*

---

## Слайд 9: Уникальность — почему мы, а не другие

**Четыре измерения, которые не закрывает никто одновременно:**

| | Ядро мышления | Культура работы | Модель мастерства | Сообщество |
|---|---|---|---|---|
| Coursera/Stepik | -- | -- | частично | -- |
| Коучи/менторы | частично | -- | частично | -- |
| ChatGPT/AI-тьюторы | -- | -- | -- | -- |
| Вузы | -- | частично | частично | частично |
| OpenClawd/Cursor | -- | частично | -- | -- |
| **IWE** | **да** | **да** | **да** | **да** |

**Ключевой дифференциатор:** четыре компонента вместе. AI-платформы (Claude, Cursor, OpenClawd) дают инструменты, но не говорят КАК организовать интеллектуальную работу. IWE даёт операционную систему поверх любой из них — ядро мышления + культуру работы + траекторию роста + сообщество. Участники не просто «используют AI», а выстраивают собственную среду, в которой AI усиливает их мышление.

---

## Слайд 10: Moat — 7 структурных барьеров

1. **Ядро мышления (FPF)** — 30+ лет формализации, 5400+ текстов. Не воспроизводится за деньги.
2. **Цифровой двойник → персональное руководство** — чем дольше участник в IWE, тем точнее его профиль и руководство. Data moat + switching costs.
3. **Open-content модель** — конкурент не может открыть свой контент без потери бизнеса.
4. **AI-персонализация в масштабе MOOC** — индивидуальное наставничество для тысяч.
5. **Экономика вклада** — участники создают контент, сетевые эффекты.
6. **Vendor-agnostic ОС** — IWE работает поверх любой AI-платформы. Не конкурируем с вендорами — сажаемся на них.
7. **Global core / local edge** — ядро (методология) универсально, адаптация локальная.

**Чтобы скопировать, конкуренту нужно 5-10 лет и отказ от текущей бизнес-модели.**

---

## Слайд 11: Traction — где мы сейчас (честно)

**$60K ARR при $0 CAC. 500 платящих подписчиков. 11 лет bootstrapping.**

**Что доказано:**
- Люди платят за развитие мышления (не за контент — контент открыт)
- Модель работает без маркетингового бюджета (органический рост, сарафанное радио)
- Retention выше EdTech-бенчмарков (45% на 6 мес vs 30-40% в индустрии)

**Что пока не доказано (и что должен доказать транш):**
- Способность расти быстрее ~30% YoY (текущий органический темп)
- Конверсия при платном привлечении (CAC пока $0 — не тестировали)
- Международный спрос (EN-версии нет)
- Рост ARPU с $10 до $40 (IWE + Web App ещё не запущены)

**Историческая динамика:**

| Период | Сообщество | Подписчики | ARR | Событие |
|---|---|---|---|---|
| 2015 | ~100 | — | — | Первые семинары, формирование методологии |
| 2018 | ~1 500 | ~50 | ~$6K | Запуск LMS, первые онлайн-курсы |
| 2020 | ~5 000 | ~150 | ~$18K | COVID-рост, переход в онлайн |
| 2023 | ~9 000 | ~300 | ~$36K | 10 наставников, корпоративные клиенты |
| 2025 | ~13 000 | ~500 | ~$60K | AI-интеграция (бот), 10 корп. клиентов |

*Рост ~30% YoY — стабильный, но не венчурный. Именно поэтому нужен капитал: мы доказали, что умеем строить. Теперь нужно доказать, что умеем расти.*

**Retention и NPS (vs EdTech benchmarks):**

| Метрика | Мы | EdTech benchmark | Комментарий |
|---|---|---|---|
| Retention 6 мес | ~45% | 30-40% | Выше рынка. Цель с IWE: 60% |
| NPS | ~55 | 30-40 | Выше рынка |
| Monthly churn | ~9.2% | 9.6% (EdTech B2B SaaS) | В рынке. Цель: IWE + ЦД → 6-7% |

*Сбор актуальных данных в процессе — точные цифры будут обновлены*

*Визуал: два графика рядом — (1) 11 лет стабильного 30% YoY роста, (2) целевая кривая с инвестициями. Точка перегиба = транш.*

---

## Слайд 12: Финансы — unit economics

**Экономика одного участника (сейчас и целевая):**

| Метрика | Сейчас ($10/мес) | Целевая ($40/мес с IWE) | EdTech benchmark |
|---|---|---|---|
| **LTV** | $120 (12 мес) | $480-720 (12-18 мес) | $500-2000 |
| **CAC** | ~$0 | ~$15-50 (blended) | $1,143 (higher ed) |
| **LTV/CAC** | ∞ (organic) | 10-48x | >3x — хорошо |
| **Gross margin** | 70-85% | 75-85% | 65-80% |

**Ключевой рычаг:** ARPU x4 ($10 → $40) через IWE + Web App + AI-персонализацию. При том же retention это превращает $60K ARR в $240K ARR даже без роста базы.

**Прогноз роста (bottom-up):**

| | Сейчас | Год 1 | Год 3 | Год 5 |
|---|---|---|---|---|
| Подписчики | 500 | 3 000 | 30 000 | 100 000 |
| ARPU | $10/мес | $20/мес (blended) | $35/мес | $40/мес |
| ARR | ~$60K | $720K | $12.6M | $48M |

**Breakdown прогноза 500 → 3 000 (Год 1):**

| Канал | Механизм | Новых подписчиков |
|---|---|---|
| **Органический рост** | Текущий тренд ~30% YoY (сарафанное радио) | +150 |
| **Web App запуск** | Конверсия из сообщества (13K) — доступ без Telegram | +500 |
| **AI-персонализация (IWE)** | Retention рост 45% → 60%, снижение оттока | +350 (сохранённые) |
| **Контент-маркетинг** | YouTube, статьи, подкасты — расширение воронки | +700 |
| **Корпоративные клиенты** | 10 → 25 клиентов, средний чек 20 подписок | +300 |
| **Партнёрства и ивенты** | Конференции, коллаборации с IT-сообществами | +500 |
| **Итого** | | **+2 500** (500 → 3 000) |

**Чувствительность:** при пессимистичном сценарии (50% от плана) — 1 750 подписчиков, $420K ARR. Breakeven при ~1 000 подписчиков.

---

## Слайд 13: Команда — 20 человек

- **Сооснователь-методолог** — автор методологии FPF. 30+ лет системная инженерия. 5400+ текстов. Ядро мышления IWE.
- **Сооснователь, менеджер, бизнес-лидер** — 20+ лет менеджмент. Архитектор IWE.
- **ИТ-команда (5 чел)** — архитектор, бэкенд-разработчики, фронтенд-разработчик, ML/AI инженер.
- **10 наставников-преподавателей** — действующие практики, ведут семинары и потоки. Масштабируются из мастеров.
- **Команда маркетинга и продукта (3 чел)** — продвижение, контент, product management.

---

## Слайд 14: Стадия — что доказано и что предстоит

**11 лет bootstrapping. $60K ARR. 500 платящих. Первый раунд.**

| Что доказано (seed-level) | Что предстоит доказать (на что транш) |
|---|---|
| PMF: 500 платящих, 45% retention, $0 CAC | Рост быстрее 30% YoY |
| Методология работает (11 лет, 5400+ текстов) | Масштабируемость за пределами RU-рынка |
| Команда 20 чел, 10 наставников | Конверсия при платном привлечении |
| 10 корп. клиентов (ранний B2B) | ARPU x4 ($10 → $40 через IWE) |
| 13 000 сообщество, NPS 55 | Web App + EN-версия |

**Мы не типичный стартап: 11 лет без внешнего капитала — это фундамент, не проблема. Но для перехода от органического роста к масштабированию нужны инвестиции.**

---

## Слайд 15: Ask и следующие шаги

**Первый раунд. Структура: priced equity round, Delaware C-Corp. Размер и оценка — предмет обсуждения.**

**Фокус первых 6 месяцев (куда пойдут первые деньги):**

| Приоритет | Что | Результат | Как измерить успех |
|---|---|---|---|
| 1 | **Web App** (выход из Telegram) | Доступ из браузера, новая воронка | Конверсия из сообщества (13K) → подписчики |
| 2 | **IWE + AI-персонализация** | ARPU рост $10 → $20+ | Retention 45% → 55%, churn снижение |
| 3 | **EN-версия** (контент + лендинг) | Первые 100 EN-подписчиков | Органический трафик, конверсия |

**Использование средств (полный раунд, 36+ мес runway):**

| Направление | Доля | Что даёт |
|---|---|---|
| **Продукт (R&D)** | 40% | IWE-дистрибутив + AI-персонализация + Web App |
| **Международная экспансия** | 22% | EN-версия (рынок 100x), локализация |
| **Маркетинг** | 18% | Масштабирование organic growth + контент-маркетинг |
| **Команда и операции** | 20% | Найм до 35 чел, инфраструктура |

*Основатели 11 лет строили компанию без внешнего капитала и рыночных зарплат. При согласовании условий раунда хотели бы обсудить возможность founder secondary — стандартную практику для bootstrapped-компаний на первом раунде.*

**Целевые метрики через 18 мес:** 5 000 подписчиков, $1.2M ARR, ARPU $20+, EN-версия запущена.

**Ближайшие шаги:**
1. Показать главе фонда
2. Due diligence
3. Согласование term sheet
4. Closing

---

*v0.5 «Мышление для людей» | 24 марта 2026*
